Switch from hunter to conan

--- a/QuoteVerification/QVL/Src/AttestationApp/CMakeLists.txt
+++ b/QuoteVerification/QVL/Src/AttestationApp/CMakeLists.txt
@@ -100,7 +100,7 @@ endif()
 
 ########################################################################################################################
 
-install(TARGETS ${PROJECT_NAME} DESTINATION bin)
+install(TARGETS ${PROJECT_NAME} DESTINATION bin OPTIONAL)
 install(DIRECTORY sampleData DESTINATION bin)
 
 if(BUILD_TESTS)
