--- a/QuoteVerification/QVL/Src/AttestationParsers/CMakeLists.txt
+++ b/QuoteVerification/QVL/Src/AttestationParsers/CMakeLists.txt
@@ -132,7 +132,7 @@ else()
 endif()
 
 install(TARGETS ${PROJECT_NAME} DESTINATION lib OPTIONAL)
-install(TARGETS ${PROJECT_NAME}Static DESTINATION lib OPTIONAL)
+install(TARGETS ${PROJECT_NAME}Static EXPORT Qvl DESTINATION lib OPTIONAL)
 install(DIRECTORY include/ DESTINATION include)
 
 if(BUILD_TESTS)
