Allow apple-clang compiler

--- a/QuoteVerification/QVL/Src/CMakeLists.txt
+++ b/QuoteVerification/QVL/Src/CMakeLists.txt
@@ -155,11 +155,12 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 
 set(CMAKE_POSITION_INDEPENDENT_CODE TRUE) # adds -fpic/-fpie/-pie
 
-if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-	if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-		if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "5.0")
+if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+	if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
+		if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS "5.0")
 			message(FATAL_ERROR "Clang 5.0 or above required.")
 		endif()
+		# TODO: add a similar version check for apple-clang ?
 		set(IGNORED_WARNINGS
 				"-Wno-gnu-statement-expression" #warns about __FILE__, __LINE__, etc. compiler macros
 				"-Wno-c++98-compat"             #family of warnings indicating this code may cause errors if compiled with C++98 compiler
